force-app/main/default/objects/Cases_Analytic_Snapshot__c/Cases_Analytic_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Case Analytic Snapshot</label>
    <nameField>
        <label>Cases Analytic Snapshot  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Analytic Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>