force-app/main/default/objects/Cases_Analytic_Snapshot__c/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <label>Case  Origin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>