force-app/main/default/objects/Cases_Analytic_Snapshot__c/fields/Open__c.field-meta.xml
<CustomField>
    <fullName>Open__c</fullName>
    <label>Open</label>
    <length>50</length>
    <type>Text</type>
</CustomField>