force-app/main/default/objects/Cases_Analytic_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Office_Id__c</columns>
    <columns>Open__c</columns>
    <columns>Case_Origin__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>